fix responsiveness issues on mobile

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -97,6 +97,8 @@ nav li #contact-link {
     flex: 1;
 }
 
+
+
 .intro-text {
     flex: 1;
     text-align: left;
@@ -175,11 +177,20 @@ nav li #contact-link {
 
 .work-container .project {
     flex: 1;
-    min-width: 400px;
-    min-height: 300px;
-    background-color: #F0A6CA;
-    border: solid #333333;
-    padding: 8px;
+    width: 100%;
+    height: auto;
+    margin: 8px;
+}
+
+@media screen and (max-width: 600px) {
+    .work-container .projects-grid {
+        flex-direction: column;
+    }
+
+    .work-container .project {
+        height: auto;
+        overflow: hidden;
+    }
 }
 
 
